syntax = "proto3";
option java_multiple_files = true;
package org.example;
option java_package = "org.example";

enum Status {
  FAILED = 0;
  SUCCESS = 1;
}

message UpdateInfoRequest {
  int32 userId = 1;
  string firstName = 2;
  string email = 3;
  string phone = 4;
//
//  repeated Address address = 5;
//  message Address {
//    string street = 1;
//    string city = 2;
//    bool isShippingAddress = 3;
//  }
}

message UpdateInfoResponse {
  int32 userId = 1;
  Status isSuccess = 2;
}

service UpdateInfoService {
  rpc update(UpdateInfoRequest) returns (UpdateInfoResponse);
}